--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,11 +53,11 @@
         @apply mb-[60px] sm:mb-0;
     }
     main {
-        @apply mt-10 mx-8 sm:mx-10 pb-10;
+        @apply mx-8 sm:mx-10 pb-10;
     }
     main section{
         @apply mx-auto min-h-[80vh];
-        @apply px-2 md:px-6 mt-10 py-12; 
+        @apply px-2 md:px-6 mt-5 py-12; 
         @apply bg-white rounded-2xl shadow-[-1px_0px_2px_0px_rgba(0,0,0,0.25),1px_1px_2px_0px_rgba(0,0,0,0.25)];
 
         @apply dark:bg-slate-800;
