--- a/frontend/src/Components/Admin/InsideEdital/Modais/AdminProfile/AdminProfileModal.css
+++ b/frontend/src/Components/Admin/InsideEdital/Modais/AdminProfile/AdminProfileModal.css
@@ -2,6 +2,7 @@
 
 #informations-user {
     @apply flex bg-gray-100 py-2 px-4 gap-6;
+    /* @apply flex bg-white py-2 px-4 gap-6; */
 }
 
 #photo-user {
@@ -21,7 +22,7 @@
 }
 
 #change-pass {
-    @apply flex gap-1 mt-1;
+    @apply flex gap-1 mt-1 cursor-pointer;
 }
 
 #lock-icon {
@@ -29,7 +30,7 @@
 }
 
 #change-pass-text {
-    @apply text-red-700 font-bold text-sm;
+    @apply text-red-700 font-semibold text-sm;
 }
 
 #form-title {
