--- a/frontend/src/Pages/Admin/InsideEdital/Chamadas/PreviewChamadas.css
+++ b/frontend/src/Pages/Admin/InsideEdital/Chamadas/PreviewChamadas.css
@@ -12,6 +12,10 @@
     @apply font-semibold text-2xl;
 }
 
+#preview-editalref {
+    @apply text-sm text-gray-600 font-semibold mb-4;
+}
+
 #back-btn {
     @apply px-4 py-2.5 text-sm font-semibold text-white bg-[var(--admin-button)] rounded-md hover:bg-[var(--admin-button-hover)] focus:outline-none cursor-pointer;
 }
