--- a/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
+++ b/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
@@ -50,7 +50,7 @@
 }
 
 #tabs-nav-button {
-    @apply whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm;
+    @apply whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm cursor-pointer;
 }
 
 /* Access Buttons */
