--- a/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
+++ b/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
@@ -25,8 +25,20 @@
 }
 
 #rows-3-input,
-.rows-2-input {
+.rows-3-input {
     @apply grid grid-cols-1 md:grid-cols-3 gap-x-3 gap-y-2;
+}
+#rows-4-input,
+.rows-4-input {
+    @apply grid grid-cols-1 md:grid-cols-4 gap-x-3 gap-y-2;
+}
+#rows-5-input,
+.rows-5-input {
+    @apply grid grid-cols-1 md:grid-cols-5 gap-x-3 gap-y-2;
+}
+#rows-6-input,
+.rows-6-input {
+    @apply grid grid-cols-1 md:grid-cols-6 gap-x-3 gap-y-2;
 }
 
 /* Buttons */
