✨feat: quadro de vagas com múltiplos polos por vaga

--- a/frontend/src/Components/Admin/InsideEdital/Modais/QuadroVagas/QuadroVagasModal.css
+++ b/frontend/src/Components/Admin/InsideEdital/Modais/QuadroVagas/QuadroVagasModal.css
@@ -23,3 +23,7 @@
 #categorias-customizadas-create {
     @apply flex h-12 justify-center items-center border border-dashed border-green-400;
 }
+
+#multiselect-primereact #p-multiselect-token{
+    @apply bg-blue-600 text-blue-800;
+}
