--- a/frontend/src/Components/Admin/InsideEdital/TopBar/TopBar.css
+++ b/frontend/src/Components/Admin/InsideEdital/TopBar/TopBar.css
@@ -1,7 +1,11 @@
 @reference "@/index.css";
 
 #header-container {
-    @apply flex items-center w-full px-4 py-2 bg-white shadow rounded-md mb-4;
+    @apply md:flex hidden items-center w-full px-4 py-2 bg-white shadow rounded-md mb-4;
+}
+
+#header-container-mobile {
+    @apply flex md:hidden items-center justify-between w-full px-4 py-2 bg-white shadow rounded-md mb-4;
 }
 
 #header-edital {
