--- a/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
+++ b/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
@@ -56,7 +56,22 @@
 
 /* Tabs */
 #tabs-container {
-    @apply border-b border-gray-200 mb-4;
+    @apply border-b border-gray-200 mb-4 overflow-x-auto overflow-y-hidden;
+}
+#tabs-container::-webkit-scrollbar {
+    height: 4px;
+}
+
+#tabs-container::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+#tabs-container::-webkit-scrollbar-thumb {
+    @apply bg-purple-300 rounded-full;
+}
+
+#tabs-container::-webkit-scrollbar-thumb:hover {
+    @apply bg-blue-400;
 }
 
 #tabs-navs {
