--- a/frontend/src/Pages/Candidato/InsideProcesso/VisaoGeral.css
+++ b/frontend/src/Pages/Candidato/InsideProcesso/VisaoGeral.css
@@ -1,5 +1,5 @@
 @reference "@/index.css";
 
-#content {
+#visao-geral-content {
     @apply mt-10 px-4 py-2 bg-white rounded-md flex flex-col justify-center;
 }
