--- a/frontend/src/Components/Admin/ProcessoCard/ProcessoCard.css
+++ b/frontend/src/Components/Admin/ProcessoCard/ProcessoCard.css
@@ -11,7 +11,7 @@ li.ProcessoCard{
     drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.08));
 }
 li.ProcessoCard article{
-  @apply flex flex-row border p-4 rounded-md shadow-md bg-gray-50 space-x-3;
+  @apply flex flex-row border rounded-md shadow-md bg-gray-50 space-x-3 p-1;
 
   /* Light theme */
 
@@ -36,6 +36,10 @@ li.ProcessoCard h3.descricao{
 
 li.ProcessoCard aside.lateralBar{
    @apply w-2 min-h-11/12 shrink-0 rounded-[15px];
+}
+
+li.ProcessoCard div.content{
+   @apply p-3;
 }
 
 li.ProcessoCard p.edital{
