--- a/frontend/src/Components/Candidatos/SubHeader/SubHeader.css
+++ b/frontend/src/Components/Candidatos/SubHeader/SubHeader.css
@@ -5,8 +5,8 @@ header#sub-header {
 }
 
 #sub-header nav {
-    @apply container relative flex mx-auto rounded-b-2xl;
-    @apply px-6 py-2 flex flex-nowrap justify-between;
+    @apply container relative flex flex-nowrap mx-auto rounded-b-2xl;
+    @apply px-6 py-2;
     @apply min-w-[310px] max-w-screen-xl h-[40px];
     
     @apply shadow-sm;
@@ -21,5 +21,5 @@ header#sub-header {
 }
 
 div#sub-nav-item {
-    @apply flex items-center justify-center lg:gap-12 md:gap-6;
+    @apply flex items-center justify-center lg:gap-24 md:gap-12 gap-6;
 }
