--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -203,6 +203,8 @@ div.info-not-found-itens p#second{
     --header-candidato-responsive-hover-nav-item: #749FF4;
     --header-candidato-toggle-btn: #3475DA;
 
+    --welcome-text-color: #2A83ED;
+
     /* ------------------ FIM CANDIDATO ------------------ */
     
     /* ---------------------- ADMIN ---------------------- */
