--- a/frontend/src/Components/Candidatos/ProcessoCard/ProcessoCard.css
+++ b/frontend/src/Components/Candidatos/ProcessoCard/ProcessoCard.css
@@ -26,8 +26,12 @@ div.cardBase .cardName {
     @apply text-left mb-3 text-black dark:text-white;
     font-family: "Sora", sans-serif;
 
-    @apply text-2xl;
+    @apply text-xl;
     @apply font-semibold leading-[19px] not-italic;
+}
+
+div.cardBase .cardNameEdital {
+    @apply text-gray-700 dark:text-white;
 }
 
 div.cardBase .cardContent {
