♻️refactor: Reorganização da subpágina de informações básicas do edital, tanto pra criação, quanto pra alteração, modificação dos textos de regex para validar os inputs para quando não tiver valor default

--- a/frontend/src/Components/Global/Stepper/Stepper.css
+++ b/frontend/src/Components/Global/Stepper/Stepper.css
@@ -10,7 +10,7 @@
 
 .step-item {
     @apply flex flex-col items-center text-center relative;
-    width: 120px;
+    max-width: 120px;
     flex-shrink: 0;
 }
 
